# talebook

./: .claude.md  .dockerignore  .gitignore  .pre-commit-config.yaml  .style.yapf  AGENTS.md  CLAUDE.md  Dev_Features_hehetoshang_1.md  Dockerfile  Dockerfile.base  Dockerfile.cn  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  calibre_api.txt  docker-compose.yml  features.md  generate_mocks.py  inspect_db.py  merge_summary.md  package.json  pyproject.toml  requirements.txt  reset.css  server.py  test_format.py  test_meta.py  test_tomato_api.py  test_tomato_api_simple.py  tools.py  version.txt
.claude/: settings.local.json
.github/: FUNDING.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
app/: .eslintrc.js  .gitignore  CLAUDE.md  Makefile  README.md  app.vue  eslint.config.js  i18n.config.ts  mock-server.js  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vue.config.js
docker/: Dockerfile  README.md  docker-compose.yml  local_settings.py  multi-user.Dockerfile  setup_nodejs_12.x.sh  start.sh
docs/: INSTALL.zh_CN.md
document/: Development.en_US.md  Development.zh_CN.md  INSTALL.zh_CN.md  README.en_US.md  README.zh_CN.md
kubernetes/: douban-rs-api-deployment.yaml  douban-rs-api-service.yaml  talebook-claim0-persistentvolumeclaim.yaml  talebook-deployment.yaml  talebook-service.yaml
scripts/: check_i18n_translation_missing.py  check_i18n_translation_useless.py  seed_demo_env.sh
tests/: .gitignore  conftest.py  run.py  test_admin.py  test_admin_webdav.py  test_baike.py  test_biquge.py  test_book_formats.py  test_booksource_admin.py  test_booksource_engine.py  test_calibre.py  test_captcha.py  test_dialogue.py  test_douban.py  test_main.py  test_models.py  test_network_library.py  test_network_save.py  test_piper_engine.py  test_qimao.py  test_reading_state.py  test_scan.py  test_service.py  test_ssl_crt.py  test_tomato_novel.py  test_tts_engine.py  test_tts_service.py  test_txt.py  test_upload.py  test_utils.py  test_xhsd.py  test_youshu.py
tools/: convert_smoke.sh  for_use_calibre_main_zh_CN.po  i18n.sh  mebook-spider.py  orzbook-spider.py  run-spider.sh  spider.py  tools.py  update.sh  watch-settings-and-reload-nginx.sh
v2/: __init__.py  douban.py  models.py  server.py  settings.py
vue-calibre/: package-lock.json  package.json  vue.config.js
webserver/: CLAUDE.md  MIGRATE_DB_README.md  (+21 more)
(+651 files in other folders)
