[project]
name = "talebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "flake8>=7.3.0",
    "jinja2==3.1.4",
    "pymysql>=1.1.2",
    "msgpack>=1.1.2",
    "pytest==7.4.4",
    "pytest-cov>=4.1.0",
    "social-auth-app-tornado==1.0.0",
    "social-auth-core==4.5.1",
    "social-auth-storage-sqlalchemy==1.1.0",
    "tornado==6.4.2",
]

[tool.black]
line-length = 120

